<resources>
    <string name="app_name">SSWidgets</string>
    <string name="app_desc">This is a collection of custom widgets for the LG V20 second screen. They work on the AOSP implementation and Stock. No root required.</string>

    <string name="title_activity_options">Second Screen</string>

    <string name="sound_toggle">Sound Toggle</string>
    <string name="wifi_toggle">WiFi Toggle</string>
    <string name="flash_toggle">Flashlight Toggle</string>
    <string name="bt_toggle">Bluetooth Toggle</string>
    <string name="airplane_toggle">Airplane Mode Toggle</string>
    <string name="music_back">Skip Back</string>
    <string name="music_pp">Play/Pause</string>
    <string name="music_forward">Skip Forward</string>
    <string name="music_text">Song Title</string>
    <string name="notifications_color">Notification Icons</string>
    <string name="wifi_color">WiFi Icon</string>
    <string name="mobile_color">Mobile Icon</string>
    <string name="airplane_color">Airplane Mode Icon</string>
    <string name="battery_color">Battery Info</string>
    <string name="clock_color">Clock</string>
    <string name="ss_background">Background</string>

    <string name="app_key">App_Key</string>
    <string name="contact_key">Contact Key</string>
    <string name="def_key">Def_Key</string>

    <string name="color">Color</string>
    <string name="page_order">Page Order</string>
    <string name="toggle_order">Toggle Order</string>
    <string name="options">Options</string>
    <string name="unknown">Unknown</string>

    <string name="color_desc">Color all the things!</string>
    <string name="weather_desc">Set up weather widget.</string>

    <string name="general">General</string>
    <string name="information">Information Screen</string>
    <string name="toggles">Toggles Screen</string>
    <string name="recents">Recents Screen</string>
    <string name="contacts">Contacts Screen</string>
    <string name="launcher">Launcher Screen</string>

    <string name="contacts_label">Contacts</string>
    <string name="weather_label">Weather</string>
    <string name="image_label">Image</string>

    <string name="open_weather_api_key">OpenWeather Map API Key</string>
    <string name="get_key">Get an API Key</string>

    <string name="welcome">Welcome!</string>
    <string name="perm_error">Hmm. Something wasn\'t granted. (%s)</string>

    <string name="grant_notification_access_title">Grant Notification Access</string>
    <string name="grant_notification_access_desc">Notification Access is needed for the Information View, to show notification icons.</string>

    <string name="grant_permissions_title">Grant Permissions</string>
    <string name="grant_permissions_desc">Location Access is needed to report Cellular Signal.\nContacts Access is needed to use the Contacts widget.\nBATTERY_STATS is needed to read battery information.\nWRITE_SECURE_SETTINGS is needed to store information.</string>

    <string name="no_root">Could not acquire root access. Please use ADB</string>
    <string name="set_api_weather">No weather API key specified. Please enter one in the app.</string>
    <string name="pick_image">Pick Image</string>
    <string name="as_of">As of:</string>
    <string name="use_current_location">Use Current Location</string>
    <string name="pick_location">Pick Location</string>

    <string name="current_location">Current Location</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
</resources>
